{
    "name": "InpuActions",
    "maps": [
        {
            "name": "ActionMap",
            "id": "99ffe7de-93c5-4bdd-ae0c-00dcbc40d621",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "5f7b2bd5-0c92-4ed1-b026-0bf7014171e0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseButtonLeft",
                    "type": "Value",
                    "id": "99517372-24c6-4254-9ad2-cd9b80903a4c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseButtonRight",
                    "type": "Button",
                    "id": "eeaf1d20-07aa-4618-9eb3-f2f5a2d70542",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "db067366-6fc0-40c9-87ef-6a413bcfbb68",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf6f0882-b5c2-4982-a5b9-0ce511f4c002",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseButtonLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2647395d-92d4-4886-a852-89c6d57c109f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseButtonRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}